force-app/main/default/objects/FundingAward/fields/A1_Self_Evaluation_Required__c.field-meta.xml
<CustomField>
    <fullName>A1_Self_Evaluation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The grant recipient is required to complete the A1 self evaluation form</description>
    <inlineHelpText>The grant recipient is required to complete the A1 self evaluation form</inlineHelpText>
    <label>A1 Self Evaluation Required</label>
    <type>Checkbox</type>
</CustomField>