force-app/main/default/objects/FundingAward/fields/A_A_Grant_Spent__c.field-meta.xml
<CustomField>
    <fullName>A_A_Grant_Spent__c</fullName>
    <label>A&amp;A Grant Spent</label>
    <summarizedField>FundingAwardActual__c.Grant_A_A_Spend__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>