force-app/main/default/objects/FundingAward/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Funding Awards</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>