force-app/main/default/objects/FundingAward/fields/Application_Region__c.field-meta.xml
<CustomField>
    <fullName>Application_Region__c</fullName>
    <description>Formula field used to retrieve the region from the related Application record.</description>
    <formula>TEXT(Application__r.Region__c)</formula>
    <label>Application Region</label>
    <type>Text</type>
</CustomField>