force-app/main/default/objects/FundingAward/fields/Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Award_Amount__c</fullName>
    <description>Formula Field that represents portion of budget allocated to this Funding Award. Edits must be made using Budget records</description>
    <formula>Budget_Allocation__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field that represents portion of budget allocated to this Funding Award. Edits must be made using Budget records</inlineHelpText>
    <label>Award Amount DEPRECATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>