force-app/main/default/objects/FundingAward/fields/Award_Baseline_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Award_Baseline_Grant_Amount__c</fullName>
    <formula>Current_Baseline__r.Baseline_Total_Grant_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Baseline Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>