force-app/main/default/objects/FundingAward/fields/Budget_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Budget_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Award&apos;s related budget Application to use in roll-up summary on Budget Record</description>
    <label>Budget Allocation</label>
    <referenceTo>BudgetAllocation</referenceTo>
    <relationshipLabel>Funding Awards</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>