force-app/main/default/objects/FundingAward/fields/CF_Total_Grant_A_A_Spent__c.field-meta.xml
<CustomField>
    <fullName>CF_Total_Grant_A_A_Spent__c</fullName>
    <label>CF Total Grant A&amp;A Spent</label>
    <summarizedField>FundingAwardUpdate__c.Grant_A_A_Spend__c</summarizedField>
    <summaryFilterItems>
        <field>FundingAwardUpdate__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingAwardUpdate__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>