force-app/main/default/objects/FundingAward/fields/Class_25_26__c.field-meta.xml
<CustomField>
    <fullName>Class_25_26__c</fullName>
    <label>Class 25/26</label>
    <length>255</length>
    <type>Text</type>
</CustomField>