force-app/main/default/objects/FundingAward/fields/Class_26_27__c.field-meta.xml
<CustomField>
    <fullName>Class_26_27__c</fullName>
    <label>Class 26/27</label>
    <length>255</length>
    <type>Text</type>
</CustomField>