force-app/main/default/objects/FundingAward/fields/Class_27_28__c.field-meta.xml
<CustomField>
    <fullName>Class_27_28__c</fullName>
    <label>Class 27/28</label>
    <length>255</length>
    <type>Text</type>
</CustomField>