force-app/main/default/objects/FundingAward/fields/Combined_A_A_Spent__c.field-meta.xml
<CustomField>
    <fullName>Combined_A_A_Spent__c</fullName>
    <formula>Total_Co_Funding_A_A_Spent__c +  Total_Grant_A_A_Spent__c + CF_Total_Grant_A_A_Spent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Combined A&amp;A Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>