force-app/main/default/objects/FundingAward/fields/Combined_Capital_Spent__c.field-meta.xml
<CustomField>
    <fullName>Combined_Capital_Spent__c</fullName>
    <formula>Total_Grant_Capital_Spent__c +  Total_Co_funding_Capital_Spent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Combined Capital Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>