force-app/main/default/objects/FundingAward/fields/Cost_Centre_25_26__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre_25_26__c</fullName>
    <label>Cost Centre 25/26</label>
    <length>255</length>
    <type>Text</type>
</CustomField>