force-app/main/default/objects/FundingAward/fields/Cost_Centre_26_27__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre_26_27__c</fullName>
    <label>Cost Centre 26/27</label>
    <length>255</length>
    <type>Text</type>
</CustomField>