force-app/main/default/objects/FundingAward/fields/Cost_Centre_27_28__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre_27_28__c</fullName>
    <label>Cost Centre 27/28</label>
    <length>255</length>
    <type>Text</type>
</CustomField>