force-app/main/default/objects/FundingAward/fields/Current_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Current_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Current Award Baseline for the funding award</description>
    <inlineHelpText>This is the Current Award Baseline for the funding award</inlineHelpText>
    <label>Current Award Baseline</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>FundingBaseline__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Funding Awards (Current Baseline)</relationshipLabel>
    <relationshipName>Funding_Awards1</relationshipName>
    <type>Lookup</type>
</CustomField>