force-app/main/default/objects/FundingAward/fields/Current_Fraud_Management_Plan_RAG__c.field-meta.xml
<CustomField>
    <fullName>Current_Fraud_Management_Plan_RAG__c</fullName>
    <label>Current Fraud Management Plan RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>