force-app/main/default/objects/FundingAward/fields/Current_Overall_GR_FENC_RAG__c.field-meta.xml
<CustomField>
    <fullName>Current_Overall_GR_FENC_RAG__c</fullName>
    <label>Current Overall GR FENC RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>