force-app/main/default/objects/FundingAward/fields/DAC_RAG_Income_Eligibility_Verification__c.field-meta.xml
<CustomField>
    <fullName>DAC_RAG_Income_Eligibility_Verification__c</fullName>
    <label>DAC RAG Income Eligibility Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>