force-app/main/default/objects/FundingAward/fields/E_Code_25_26__c.field-meta.xml
<CustomField>
    <fullName>E_Code_25_26__c</fullName>
    <label>E Code 25/26</label>
    <length>255</length>
    <type>Text</type>
</CustomField>