force-app/main/default/objects/FundingAward/fields/E_Code_26_27__c.field-meta.xml
<CustomField>
    <fullName>E_Code_26_27__c</fullName>
    <label>E Code 26/27</label>
    <length>255</length>
    <type>Text</type>
</CustomField>