force-app/main/default/objects/FundingAward/fields/E_Code_27_28__c.field-meta.xml
<CustomField>
    <fullName>E_Code_27_28__c</fullName>
    <label>E Code 27/28</label>
    <length>255</length>
    <type>Text</type>
</CustomField>