force-app/main/default/objects/FundingAward/fields/Funding_Award_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award_Acronym__c</fullName>
    <description>Short name for Funding Award to be used in reference fields</description>
    <label>Funding Award Acronym</label>
    <length>4</length>
    <type>Text</type>
</CustomField>