force-app/main/default/objects/FundingAward/fields/Funding_Award_Reference__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award_Reference__c</fullName>
    <formula>FundingOpportunity.Funding_Scheme_Acronym__c + &quot;-&quot; +  Funding_Award_Acronym__c + &quot;-AWD-&quot;+ MID( AwardNumber , 5, LEN(AwardNumber))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Award Reference</label>
    <type>Text</type>
</CustomField>