force-app/main/default/objects/FundingAward/fields/Funding_Self_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Funding_Self_Evaluation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provides a lookup to the Funding Self Evaluation object</description>
    <label>Funding Self Evaluation</label>
    <referenceTo>Funding_Self_Evaluation__c</referenceTo>
    <relationshipLabel>Funding Awards</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>