force-app/main/default/objects/FundingAward/fields/Grant_Participant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Participant_Type__c</fullName>
    <label>Grant Participant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Consortium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>