force-app/main/default/objects/FundingAward/fields/Grant_Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Recipient_Type__c</fullName>
    <formula>TEXT(  Application__r.Grant_Recipient_Type__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Recipient Type</label>
    <type>Text</type>
</CustomField>