force-app/main/default/objects/FundingAward/fields/Latest_Funding_Award_Update__c.field-meta.xml
<CustomField>
    <fullName>Latest_Funding_Award_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Funding Award Update</label>
    <referenceTo>FundingAwardUpdate__c</referenceTo>
    <relationshipLabel>Funding Awards</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>