force-app/main/default/objects/FundingAward/fields/Latest_Update__c.field-meta.xml
<CustomField>
    <fullName>Latest_Update__c</fullName>
    <formula>Latest_Funding_Award_Update__r.Update_Deadline_Date__c</formula>
    <label>Latest Update</label>
    <type>Date</type>
</CustomField>