force-app/main/default/objects/FundingAward/fields/Month_of_Latest_Update__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Latest_Update__c</fullName>
    <formula>Latest_Funding_Award_Update__r.Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month of Latest Update</label>
    <type>Text</type>
</CustomField>