force-app/main/default/objects/FundingAward/fields/No_of_Homes_Assessed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Assessed__c</fullName>
    <description>KPI 2 - No. of Homes Assessed</description>
    <inlineHelpText>KPI 2 - No. of Homes Assessed</inlineHelpText>
    <label>No. of Homes Assessed</label>
    <summarizedField>FundingAwardActual__c.No_of_Homes_Assessed__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>