force-app/main/default/objects/FundingAward/fields/No_of_Homes_Completed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Completed__c</fullName>
    <description>KPI 5 - No. of Homes Completed</description>
    <inlineHelpText>KPI 5 - No. of Homes Completed</inlineHelpText>
    <label>No. of Homes Completed</label>
    <summarizedField>FundingAwardActual__c.No_of_Homes_Completed__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>