force-app/main/default/objects/FundingAward/fields/No_of_Homes_Ready_For_Installs_To_Start__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Ready_For_Installs_To_Start__c</fullName>
    <description>KPI 2 - No. of Homes Ready for Installs to Start</description>
    <inlineHelpText>KPI 2 - No. of Homes Ready for Installs to Start</inlineHelpText>
    <label>No. of Homes Ready For Installs To Start</label>
    <summarizedField>FundingAwardActual__c.No_of_Homes_Ready_for_Installs_to_Start__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>