force-app/main/default/objects/FundingAward/fields/No_of_Homes_Started_Installations__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Started_Installations__c</fullName>
    <description>KPI 3 - No. of Homes Started Installations</description>
    <inlineHelpText>KPI 3 - No. of Homes Started Installations</inlineHelpText>
    <label>No. of Homes Started Installations</label>
    <summarizedField>FundingAwardActual__c.No_of_Homes_Started_Installations__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>