force-app/main/default/objects/FundingAward/fields/No_of_Homes_Suitable_For_Retrofit__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Suitable_For_Retrofit__c</fullName>
    <description>KPI 1 - No. of Homes Identified as Suitable for Retrofit</description>
    <inlineHelpText>KPI 1 - No. of Homes Identified as Suitable for Retrofit</inlineHelpText>
    <label>No. of Homes Suitable For Retrofit</label>
    <summarizedField>FundingAwardActual__c.No_of_Homes_Suitable_For_Retrofit__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>