force-app/main/default/objects/FundingAward/fields/No_of_Homes_To_EPC_C__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_To_EPC_C__c</fullName>
    <description>No. of Homes to EPC C - Cumulative, derive from post-installation SAP scores</description>
    <inlineHelpText>No. of Homes to EPC C - Cumulative, derive from post-installation SAP scores</inlineHelpText>
    <label>No. of Homes To EPC C</label>
    <summarizedField>FundingAwardActual__c.No_of_Homes_to_EPC_C__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>