force-app/main/default/objects/FundingAward/fields/No_of_Homes_Treated_At_Least_1_Measure__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Treated_At_Least_1_Measure__c</fullName>
    <description>KPI 4 - No. of Homes Treated with at least one measure</description>
    <inlineHelpText>KPI 4 - No. of Homes Treated with at least one measure</inlineHelpText>
    <label>No. of Homes Treated At Least 1 Measure</label>
    <summarizedField>FundingAwardActual__c.No_of_Homes_Treated_at_Least_1_Measure__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>