force-app/main/default/objects/FundingAward/fields/No_of_Homes_Validated__c.field-meta.xml
<CustomField>
    <fullName>No_of_Homes_Validated__c</fullName>
    <description>KPI 1 - No. of Homes Validated</description>
    <inlineHelpText>KPI 1 - No. of Homes Validated</inlineHelpText>
    <label>No. of Homes Validated</label>
    <summarizedField>FundingAwardActual__c.No_of_Homes_Validated__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>