force-app/main/default/objects/FundingAward/fields/Original_FRA_and_FMP_Overall_RAG__c.field-meta.xml
<CustomField>
    <fullName>Original_FRA_and_FMP_Overall_RAG__c</fullName>
    <label>Original FRA and FMP Overall RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>