force-app/main/default/objects/FundingAward/fields/Original_Fraud_Risk_Assessment_RAG__c.field-meta.xml
<CustomField>
    <fullName>Original_Fraud_Risk_Assessment_RAG__c</fullName>
    <label>Original Fraud Risk Assessment RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>