force-app/main/default/objects/FundingAward/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mirrors the owner field when the owner field is a user because salesforce don&apos;t let you make reports of Funding award and owner, good thinking sf, autopopulated by apex trigger on Funding Award</description>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>