force-app/main/default/objects/FundingAward/fields/PO_Number_25_26__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_25_26__c</fullName>
    <label>PO Number 25/26</label>
    <length>255</length>
    <type>Text</type>
</CustomField>