force-app/main/default/objects/FundingAward/fields/PO_Number_26_27__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_26_27__c</fullName>
    <label>PO Number 26/27</label>
    <length>255</length>
    <type>Text</type>
</CustomField>