force-app/main/default/objects/FundingAward/fields/PO_Number_27_28__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_27_28__c</fullName>
    <label>PO Number 27/28</label>
    <length>255</length>
    <type>Text</type>
</CustomField>