force-app/main/default/objects/FundingAward/fields/Procurement_Activity_Completed__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Activity_Completed__c</fullName>
    <label>Procurement Activity Completed</label>
    <type>Date</type>
</CustomField>