force-app/main/default/objects/FundingAward/fields/Program_Code_25_26__c.field-meta.xml
<CustomField>
    <fullName>Program_Code_25_26__c</fullName>
    <label>Program Code 25/26</label>
    <length>255</length>
    <type>Text</type>
</CustomField>