force-app/main/default/objects/FundingAward/fields/Program_Code_26_27__c.field-meta.xml
<CustomField>
    <fullName>Program_Code_26_27__c</fullName>
    <label>Program Code 26/27</label>
    <length>255</length>
    <type>Text</type>
</CustomField>