force-app/main/default/objects/FundingAward/fields/Program_Code_27_28__c.field-meta.xml
<CustomField>
    <fullName>Program_Code_27_28__c</fullName>
    <label>Program Code 27/28</label>
    <length>255</length>
    <type>Text</type>
</CustomField>