force-app/main/default/objects/FundingAward/fields/Project_RAG__c.field-meta.xml
<CustomField>
    <fullName>Project_RAG__c</fullName>
    <label>Project RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Amber</fullName>
                <color>#FF9900</color>
                <label>Amber</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <color>#33CC00</color>
                <label>Green</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>