force-app/main/default/objects/FundingAward/fields/Project_RAG_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_RAG_Status__c</fullName>
    <formula>CASE(
TEXT(Project_RAG__c),
&quot;Green&quot;, IMAGE(&quot;/resource/ragstatus/2green.png&quot;, &quot;Project RAG Status - Green&quot;, 26,26),
&quot;Amber&quot;, IMAGE(&quot;/resource/ragstatus/3amber.png&quot;, &quot;Project RAG Status - Amber&quot;, 26,26),
&quot;Red&quot;, IMAGE(&quot;/resource/ragstatus/4red.png&quot;, &quot;Project RAG Status - Red&quot;, 26,26),
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project RAG Status</label>
    <type>Text</type>
</CustomField>