force-app/main/default/objects/FundingAward/fields/Project_Team_Established__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Established__c</fullName>
    <label>Project Team Established</label>
    <type>Date</type>
</CustomField>