force-app/main/default/objects/FundingAward/fields/Self_Evaluation_A1_Form_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Self_Evaluation_A1_Form_Deadline__c</fullName>
    <label>Self Evaluation Deadline</label>
    <type>Date</type>
</CustomField>