force-app/main/default/objects/FundingAward/fields/Self_Evaluation_Launch__c.field-meta.xml
<CustomField>
    <fullName>Self_Evaluation_Launch__c</fullName>
    <description>Date that Self Evaluation form is available from</description>
    <label>Self Evaluation Launch</label>
    <type>Date</type>
</CustomField>