force-app/main/default/objects/FundingAward/fields/Simultaneous_Change_Control_Requests__c.field-meta.xml
<CustomField>
    <fullName>Simultaneous_Change_Control_Requests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that the Grant Recipient can have more than one open change control request at a time</description>
    <inlineHelpText>Denotes that the Grant Recipient can have more than one open change control request at a time</inlineHelpText>
    <label>Simultaneous Change Control Requests</label>
    <type>Checkbox</type>
</CustomField>