force-app/main/default/objects/FundingAward/fields/Supplier_Operational_Region__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Operational_Region__c</fullName>
    <label>Supplier Operational Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LG: East of England and London</fullName>
            </value>
            <value>
                <fullName>LG: North and Midlands</fullName>
            </value>
            <value>
                <fullName>LG: Southern England</fullName>
            </value>
            <value>
                <fullName>SHFCF: East of England</fullName>
            </value>
            <value>
                <fullName>SHFCF: London</fullName>
            </value>
            <value>
                <fullName>SHFCF: North and Midlands</fullName>
            </value>
            <value>
                <fullName>SHFCF: South East</fullName>
            </value>
            <value>
                <fullName>SHFSP: National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>