force-app/main/default/objects/FundingAward/fields/Total_Capital_Already_Spent_Upfront__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital_Already_Spent_Upfront__c</fullName>
    <formula>Current_Baseline__r.Total_Capital_Already_Spent_Upfront__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Capital Already Spent Upfront</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>