force-app/main/default/objects/FundingAward/fields/Total_Co_Funding_A_A_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Co_Funding_A_A_Spent__c</fullName>
    <label>Total Co-Funding A&amp;A Spent</label>
    <summarizedField>FundingAwardActual__c.Co_funding_A_A_spend__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>