force-app/main/default/objects/FundingAward/fields/Total_Co_funding_Capital_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Co_funding_Capital_Spent__c</fullName>
    <label>Total Co-funding Capital Spent</label>
    <summarizedField>FundingAwardActual__c.Co_funding_Capital_Spend__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>