force-app/main/default/objects/FundingAward/fields/Total_Cost_of_Measures__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Measures__c</fullName>
    <description>Aggregated total of Measure costs</description>
    <label>Total Cost of Measures</label>
    <summarizedField>Property_Measure__c.Total_Cost_of_Single_Measure_Installatio__c</summarizedField>
    <summaryForeignKey>Property_Measure__c.Related_Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>