force-app/main/default/objects/FundingAward/fields/Total_Energy_Savings__c.field-meta.xml
<CustomField>
    <fullName>Total_Energy_Savings__c</fullName>
    <label>Total Energy Savings (kWh)</label>
    <summarizedField>FundingAwardActual__c.Energy_Savings_kWh__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>