force-app/main/default/objects/FundingAward/fields/Total_Grant_A_A_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Grant_A_A_Spent__c</fullName>
    <label>Total Grant A&amp;A Spent</label>
    <summarizedField>FundingAwardActual__c.Grant_A_A_Spend__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>