force-app/main/default/objects/FundingAward/fields/Total_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Grant_Amount__c</fullName>
    <description>Formula Field that adds Baseline Capital and A&amp;A spend together</description>
    <formula>Application__r.Total_Grant_Funding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Grant Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>