force-app/main/default/objects/FundingAward/fields/Total_Grant_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Grant_Amount_Received__c</fullName>
    <label>Total Grant Amount Received</label>
    <summarizedField>FundingDisbursement.Amount</summarizedField>
    <summaryFilterItems>
        <field>FundingDisbursement.Status</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingDisbursement.FundingAwardId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>