force-app/main/default/objects/FundingAward/fields/Total_Grant_Ancillary_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Grant_Ancillary_Spent__c</fullName>
    <label>Total Grant Ancillary Spent</label>
    <summarizedField>FundingAwardActual__c.Grant_Ancillary_Spend__c</summarizedField>
    <summaryForeignKey>FundingAwardActual__c.Funding_Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>